# old-cinder-repo

./: CMakeLists.txt
assets/: basic.json
build-debug/Debug/LearnOpenGL/assets/: lamp-box.frag  lamp-box.vert  texture.vert
src/: CMakeLists.txt  CinderUI.cpp  OpenGL-Shader.cpp  OpenGL-Tutorial-in-Cinder.cpp  OpenGL-Tutorial.cpp  mandelbrot.cpp
src/LearnOpenGL/: main.cpp
